# sparselib

./: .gitignore  README.md  pyproject.toml  setup.py
scripts/: 1D_L1_preservation.py  1D_Lp_error.py  1D_example.py  2D_example.py  3D_example.py  4D_example.py  6D_example.py  fit_sparse_grid.py  monte_carlo_2D.py  monte_carlo_4D.py  monte_carlo_6D.py  test.py
sparselib/: __init__.py  gridContainer.py  specgal.py  spgrid.py
src/sparselib/: __init__.py  gridContainer.py  spgrid.py
